# Copyright (c) 2012 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

action("version") {
  script = "//build/util/version.py"

  # This script must be run before targets depending on us.
  hard_dep = true

  # Rerun the script any time this file changes.
  version_path    = "//hello-cbase/VERSION"
  branding_path   = "//hello-cbase/BRANDING"
  lastchange_path = "//build/util/LASTCHANGE"
  source_prereqs  = [ version_path,
                      branding_path,
                      lastchange_path ]

  template_header = "//hello-cbase/version.h.in"
  output_header   = "$root_gen_dir/version.h"
  outputs         = [ output_header ]

  build_version_path    = rebase_path(version_path, root_build_dir)
  build_branding_path   = rebase_path(branding_path, root_build_dir)
  build_lastchange_path = rebase_path(lastchange_path, root_build_dir)
  build_version_header  = rebase_path(output_header, root_build_dir)
  build_template_header = rebase_path(template_header, root_build_dir)

  args = [
    "-f", "$build_version_path",
    "-f", "$build_branding_path",
    "-f", "$build_lastchange_path",
    "-i", "$build_template_header",
    "-o", "$build_version_header",
  ]
}

action("version-source") {
  script  = "//hello-cbase/tools/build/make_version_cc.py"

  # This script must be run before targets depending on us.
  hard_dep = true

  # Rerun the script any time this file changes.
  version_path    = "//hello-cbase/VERSION"
  vscript_path    = "//build/util/version.py"
  source_prereqs  = [ version_path ]

  output_source   = "$root_gen_dir/cbase_version.cc"
  outputs         = [ output_source ]

  build_version_path  = rebase_path(version_path, root_build_dir)
  build_vscript_path  = rebase_path(vscript_path, root_build_dir)
  build_source_header = rebase_path(output_source, root_build_dir)

  version = exec_script("$build_vscript_path", ["--file=$build_version_path",
     "-t @MAJOR@.@MINOR@.@BUILD@.@PATCH@"], "list lines")
  version_str = version[0]

  args = [
    "$build_source_header", "$version_str",
  ]
}

# we need a target matching the parent folder name
executable("hello-cbase") {
  sources = [
    "common/bind_test.cc",
    "common/cbase_switches.cc",
    "common/cbase_switches.hh",
    "common/command_line_test.cc",
    "common/hello_cbase_main.cc",
    "common/log_test.cc",
    "common/standard_out.cc",
    "common/thread_test.cc",
    "$root_gen_dir/cbase_version.cc"
  ]
  include_dirs = [ target_gen_dir ]

  defines = [
    "_HELLO_CBASE_",
  ]

  deps = [
    "//build/util:last_change",
    ":version",
    ":version-source",
    "//base",
  ]

  #configs -= [
  #  "//build/config/compiler:chromium_code",
  #]
  #configs += [
  #  "//build/config/compiler:no_chromium_code",
  #]
}

## Config used only by ICU code.
#config("icu_code") {
#  if (component_mode == "static_library") {
#    defines = [ "U_STATIC_IMPLEMENTATION" ]
#  }
#
#  if (is_win) {
#    # Disable some compiler warnings.
#    cflags = [
#      "/wd4005",  # Macro redefinition.
#      "/wd4068",  # Unknown pragmas.
#      "/wd4267",  # Conversion from size_t on 64-bits.
#      "/wd4996",  # Deprecated functions.
#    ]
#  } else if (is_linux) {
#    cflags = [
#      # Since ICU wants to internally use its own deprecated APIs, don't
#      # complain about it.
#      "-Wno-deprecated-declarations",
#      "-Wno-unused-function",
#    ]
#  } else if (is_clang) {
#    cflags = [
#      "-Wno-deprecated-declarations",
#      "-Wno-logical-op-parentheses",
#      "-Wno-tautological-compare",
#      "-Wno-switch",
#    ]
#  }
#}
